--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2134,6 +2134,7 @@ en:
     mobile:
       empty_route: Empty tour
       sync_pending: Sync pending
+      sync_failed: Sync failed
   deliverables_by_vehicles:
     show:
       title_page: Charge by plans
