--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,6 +168,7 @@ en:
         description_label: Specific account informations
         description_help: Account and users details
         end_subscription: End subscription
+        enable_optimization_soft_upper_bound: Enable delays
         test: Test
         max_vehicles: Number vehicles
         max_plannings: Max plans
@@ -204,6 +205,8 @@ en:
         print_stop_time: Include stop time
         print_barcode: Barcode
         speed_multiplier: Speed multiplier
+        stop_max_upper_bound: Coefficient delay / stops
+        vehicle_max_upper_bound: Coefficient delay / vehicles
         router: Routing Engine
         router_warning: This routing engine is unauthorized in this profile
         layer_warning: This layer is unauthorized in this profile
@@ -1040,7 +1043,10 @@ en:
         more the delay before time slot opening is important (0 to disallow the
         waiting time).
       optimization_force_start_help: Force vehicle start to the beginning of its schedule.
+      enable_optimization_soft_upper_bound_help: Enable delays for stops and vehicles
       enable_global_optimization_test: Enabled if Test
+      stop_max_upper_bound_help: Enable delays for stops
+      vehicle_max_upper_bound_help: Enable delays for vehicles
       print_header_help: Block of text added before each route
       print:
         title: Printing
