--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -768,6 +768,7 @@ en:
         help_urls: Help center and contact urls
         social_urls: Social networks urls
         analysis_urls: Dashboard Analytics urls
+        messagings: Messaging services
       form:
         host_help: Web URL hostname and port used to match this reseller
         name_help: Reseller brand name
