Issue#53 add default consumption (#262)
* add default consumption to custom config

* add default consumption value to assign defaults method after initialize called

* add vehicle fuel type default

* change locals

* create method emission hash

* change selector using emissions hash values

* add default key for fuel default

* rename app

* change truth source for import use emissions hash

* change default key to light diesel

* delete emissions table

* quote consistency fix

* update CHANGELOG

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2168,11 +2168,12 @@ de:
       success: Benutzer erfolgreich aktualisiert
   vehicles:
     default_name: 'Fahrzeug %{n}'
-    emissions_nothing: 'Nichts - %{n}'
-    emissions_light_petrol: 'Licht – Benzin – %{n}'
-    emissions_light_diesel: 'Licht – Diesel – %{n}'
-    emissions_light_lgp: 'Licht – Flüssiggas – %{n}'
-    emissions_ngv: 'Erdgasfahrzeug – %{n}'
+    emissions:
+      nothing: 'Nichts - %{n}'
+      light_petrol: 'Licht - Benzin - %{n}'
+      light_diesel: 'Licht - Diesel - %{n}'
+      light_lgp: 'Licht - Flüssiggas - %{n}'
+      ngv: 'Erdgasfahrzeug - %{n}'
     import:
       max_distance: maximale Entfernung (in Metern)
       max_distance_desc: maximal erreichbarer Fahrzeugabstand
