--- a/config/locales/fr.devices.yml
+++ b/config/locales/fr.devices.yml
@@ -308,11 +308,12 @@ fr:
       deliver_send:
         access: Accéder à la tournée
         transmit: Transmettre au livreur
-        action: Envoyer au livreur
+        action: Envoyer email au livreur
         send_sms: Envoyer SMS au livreur
         success: Envoyé au livreur avec succès
         fail: Échec lors de l'envoi
       deliver_sends:
+        action: Envoyer email aux livreurs
         send_sms: Envoyer SMS aux livreurs
         success: Envoyé aux livreurs avec succès
         fail: Échec lors de l'envoi
