--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -730,6 +730,7 @@ fr:
     mobile:
       default: Une erreur s'est produite
       denied_geolocation: Vous avez refusé le partage de position
+      position_unavailable: La position est indisponible
       sync_failed: La synchronisation a échoué
       unsupported_geolocation: Votre navigateur ne supporte pas la remontée de position
     planning:
